k8s-cluster-setup/gateway-api/nginx/sample-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-api
  template:
    metadata:
      labels:
        app: todo-api
    spec:
      containers:
        - name: todo-api
          image: hashicorp/http-echo
          args:
            - "-text=UP"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: todo-api-svc
  namespace: development
spec:
  selector:
    app: todo-api
  ports:
    - protocol: TCP
      port: 5678
      targetPort: 5678
