k8s-cluster-setup/gateway-api/nginx/todo-api-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: todo-api-route
  namespace: development
spec:
  parentRefs:
    - name: dev-gateway
      namespace: nginx-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/todos
      backendRefs:
        - name: todo-api-svc
          port: 5678
